plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.107'
    id "me.modmuss50.mod-publish-plugin" version "2.0.0-beta.2"
    id "com.diffplug.spotless" version "7.0.2"
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
}

def allIntegrationSourceSets = [
        "dye_depot",
        "dyenamics",
        "arts_and_crafts",
        "create_garnished",
]

def isIntegrationEnabled = { name ->
    providers.gradleProperty("enable_${name}_integration")
            .map { it.toBoolean() }
            .orElse(true)
            .get()
}

def enabledIntegrationSourceSets = allIntegrationSourceSets.findAll { name ->
    isIntegrationEnabled(name)
}

def hasIntegration = { name ->
    enabledIntegrationSourceSets.contains(name)
}

def runDirectory = providers.gradleProperty("run_directory").orElse("run").get()

sourceSets {
    enabledIntegrationSourceSets.each { name ->
        create(name) {
            java {
                srcDir "src/integration/${name}/java"
            }
            resources {
                srcDir "src/integration/${name}/resources"
            }
            compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
            runtimeClasspath += output + compileClasspath
        }
    }
    main {
        enabledIntegrationSourceSets.each { name ->
            runtimeClasspath += sourceSets[name].output
        }
    }
}

Provider<RegularFile> mainRefmap
mixin {
    mainRefmap = add(sourceSets.main, "${mod_id}.refmap.json")
    config "${mod_id}.mixins.json"
    if (hasIntegration("create_garnished")) {
        config "${mod_id}.create_garnished.mixins.json"
    }
}

def mixinConfigs = ["${mod_id}.mixins.json"]
if (hasIntegration("create_garnished")) {
    mixinConfigs.add("${mod_id}.create_garnished.mixins.json")
}

tasks.named("jar", Jar) {
    from "LICENSING.txt"
    from "LICENSE.txt"
    from "LICENSE-CREATE.txt"
    from mainRefmap
    enabledIntegrationSourceSets.each { name ->
        from sourceSets[name].output
    }
    manifest.attributes("MixinConfigs": mixinConfigs.join(","))
    exclude ".cache"
}

tasks.named("sourcesJar", Jar) {
    enabledIntegrationSourceSets.each { name ->
        from sourceSets[name].allJava
    }
}

legacyForge {
    version = "${minecraft_version}-${forge_version}"
    validateAccessTransformers = false

    accessTransformers.from "src/main/resources/META-INF/accesstransformer.cfg"

    parchment {
        minecraftVersion = parchment_minecraft_version
        mappingsVersion = parchment_mappings_version
    }

    runs {
        configureEach {
            gameDirectory = project.file(runDirectory)
            systemProperty "forge.logging.markers", "REGISTRIES"
            systemProperty "forge.logging.console.level", "debug"
            systemProperty "forge.enabledGameTestNamespaces", project.mod_id
            mixinConfigs.each { config ->
                programArgument "-mixin.config=${config}"
            }
        }

        client {
            client()
        }

        server {
            server()
            programArgument "--nogui"
        }

        gameTestServer {
            type = "gameTestServer"
        }

        data {
            data()
            def dataArgs = [
                    "--mod", project.mod_id,
                    "--all",
                    "--output", file("src/generated/resources/").getAbsolutePath(),
                    "--existing", file("src/main/resources/").getAbsolutePath(),
                    "--existing", file("src/main/translations/").getAbsolutePath(),
            ]
            enabledIntegrationSourceSets.each { name ->
                def integrationResources = file("src/integration/${name}/resources/")
                if (integrationResources.exists()) {
                    dataArgs.addAll("--existing", integrationResources.getAbsolutePath())
                }
            }
            programArguments.addAll dataArgs
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
            enabledIntegrationSourceSets.each { name ->
                sourceSet(sourceSets[name])
            }
        }
    }
}

repositories {
    maven { url "https://maven.createmod.net" } // Ponder, Flywheel
    maven { url "https://maven.ithundxr.dev/mirror" } // Registrate
    maven { url "https://maven.blamejared.com" } // JEI
    maven { url "https://maven.theillusivec4.top/" } // Curios API
    maven { url "https://maven.fallenbreath.me/releases" } // Conditional Mixin
    maven { url "https://www.cursemaven.com" }
    maven { url "https://api.modrinth.com/maven" }
    maven { url "https://maven.dragons.plus/releases" }
    mavenCentral()
}

dependencies {
    modImplementation(jarJar("me.fallenbreath:conditional-mixin-forge:${conditional_mixin_version}"))

    modCompileOnly("dev.engine-room.flywheel:flywheel-forge-api-${flywheel_minecraft_version}:${flywheel_version}")
    modRuntimeOnly("dev.engine-room.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
    modRuntimeOnly("dev.engine-room.vanillin:vanillin-forge-${flywheel_minecraft_version}:${vanillin_version}")
    modImplementation("com.tterrag.registrate:Registrate:${registrate_version}")
    modImplementation("net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}")
    modImplementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") {
        transitive false
    }

    implementation("io.github.llamalad7:mixinextras-forge:${mixin_extras_version}")
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixin_extras_version}"))
    if (!Boolean.getBoolean("idea.sync.active")) {
        annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
    }

    modCompileOnly("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}")
    modCompileOnly("mezz.jei:jei-${jei_minecraft_version}-forge-api:${jei_version}")
    modRuntimeOnly("mezz.jei:jei-${jei_minecraft_version}-forge:${jei_version}")

    modCompileOnly("top.theillusivec4.curios:curios-forge:${curios_version}+${curios_minecraft_version}:api")
    modRuntimeOnly("top.theillusivec4.curios:curios-forge:${curios_version}+${curios_minecraft_version}")

    if (hasIntegration("dye_depot")) {
        modImplementation("maven.modrinth:dye-depot:${dye_depot_version}")
    }

    if (hasIntegration("dyenamics")) {
        modImplementation("curse.maven:dyenamics-509276:${dyenamics_version}")
    }

    if (hasIntegration("arts_and_crafts")) {
        modImplementation("curse.maven:jinxedlib-1203401:${jinxedlib_version}")
        modImplementation("curse.maven:artsandcrafts-1034791:${artsandcrafts_version}")
    }

    if (hasIntegration("create_garnished")) {
        modImplementation("maven.modrinth:create-garnished:${create_garnished_version}")
    }

    modCompileOnly("curse.maven:immersive-engineering-231951:${immersive_engineering_version}")
    if (isIntegrationEnabled("immersive_engineering")) {
        modRuntimeOnly("curse.maven:immersive-engineering-231951:${immersive_engineering_version}")
    }
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            mod_github             : mod_github,
            mod_logo               : mod_logo,
            create_version_range   : create_version_range,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources {
    srcDir "src/generated/resources"
    srcDir generateModMetadata
}

legacyForge.ideSyncTask generateModMetadata

spotless {
    java {
        endWithNewline()
        leadingTabsToSpaces()
        removeUnusedImports()
        toggleOffOn()
        importOrder()
        eclipse().configFile "codeformat/formatter-config.xml"
        licenseHeaderFile "codeformat/HEADER.txt"
    }
}

build.dependsOn(spotlessApply)

publishing {
    publications {
        register("mavenJava", MavenPublication) {
            artifactId = mod_artifact_id + "-" + minecraft_version
            from components.java
        }
    }
    repositories {
        maven {
            name "DragonsPlus"
            url "https://maven.dragons.plus/releases"
            credentials(PasswordCredentials)
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
}

publishMods {
    file = jar.archiveFile
    additionalFiles.from sourcesJar.archiveFile
    changelog = project.file("CHANGELOG.md").text
    version = mod_version
    type = STABLE
    displayName = "Create: Dragons Plus ${mod_version} for Create ${minecraft_version}-${create_version_production}"
    modLoaders.add("forge")

    curseforge {
        projectId = "1216624"
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        minecraftVersions.add(minecraft_version)
        requires("create")
        client = true
        server = true
    }

    modrinth {
        projectId = "dzb1a5WV"
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)
        requires("create")
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release = 17
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
